5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1709_3064.log
== TEST (2019-05-02 11:13:57) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" or nome.lower() != "rakshasa" or nome.lower() != "hethradiah" or d1<1 or d2<1 or d1>10 or d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameaul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:36) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" or d1<1 or d2<1 or d1>10 or d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameaul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:57) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameaul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:14) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameaul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:23) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:15:31) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- EXECUTION TIME:
0.167003
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:

-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:39) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(C)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:53) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:16:06) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- EXECUTION TIME:
0.144062
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:16) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:29) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:16:43) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" and d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- EXECUTION TIME:
0.149448
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:59) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" or d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:17:05) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.lower() != "aameaul" and nome.lower() != "rakshasa" and nome.lower() != "hethradiah" or d1<1 and d2<1 and d1>10 and d2>10):
	print("Entrada invalida")

else:
	if(nome.lower() == "aameul"):
		c = 8 + (d1 + d2)
		print(c)
	elif(nome.lower() == "hethrediah"):
		c = 2 * (d1 + d2)
		print(c)
	elif(nome.lower() == "rakshasa"):
		c = 10 + (d1 + d2)
		print(c)

-- EXECUTION TIME:
0.250015
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:33) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
elif(d1>10 or d1<1):
	print("Entrada invalida")
elif(d2>10 or d2<1):
	print("Entrada invalida")
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:21:45) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
elif(d1>10 or d1<1):
	print("Entrada invalida")
elif(d2>10 or d2<1):
	print("Entrada invalida")
-- EXECUTION TIME:
0.14093
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:51) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
elif(d1>10 or d1<1):
	print("Entrada invalida")
elif(d2>10 or d2<1):
	print("Entrada invalida")
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
elif(d1>10 or d1<1):
	print("Entrada invalida")
elif(d2>10 or d2<1):
	print("Entrada invalida")
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:12) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
else:
	print("Entrada invalida")
elif(d1>10 or d1<1):
	print("Entrada invalida")
elif(d2>10 or d2<1):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    elif(d1>10 or d1<1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:02) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
else:
	print("Entrada invalida")
   if(d1>10 or d1<1):
		print("Entrada invalida")
   elif(d2>10 or d2<1):
		print("Entrada invalida")
		
	
-- ERROR:
File "XXXX", line 16
    if(d1>10 or d1<1):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
elif(nome.upper() == "HETHREDIAH"):
	c=2*(d1+d2)
	print(c)
elif(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
else:
		print("Entrada invalida")
   if(d1>10 or d1<1):
		print("Entrada invalida")
   elif(d2>10 or d2<1):
		print("Entrada invalida")
		
	
-- ERROR:
File "XXXX", line 16
    if(d1>10 or d1<1):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:30) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
else:
	print("Entrada invalida")

if(nome.upper() == "HETHRADIAH"):
	c=2*(d1+d2)
	print(c)
else:
	print("Entrada invalida")

if(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
else:
	print("Entrada invalida")
-- OUTPUT:
32
Entrada invalida
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:47:55) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(nome.upper() == "AAMEUL"):
	c=8+(d1+d2)
	print(c)
else:
	print("Entrada invalida")

if(nome.upper() == "HETHRADIAH"):
	c=2*(d1+d2)
	print(c)
else:
	print("Entrada invalida")

if(nome.upper() == "RAKSHASA"):
	c=10+(d1+d2)
	print(c)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.128568
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
Entrada invalida
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
Entrada invalida
Entrada invalida
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
Entrada invalida
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:51:58) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:06) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:07) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.137894
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:

-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:08) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.153549
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:

-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:08) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.136493
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.154825
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.321788
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:

-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:09) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- EXECUTION TIME:
0.1899
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:53) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
else:
	print("Entrada invalida")
	

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:46) 
-- CODE:
nome = input("qual a cabeca: ")
d1 = int(input("dado 1: "))
d2 = int(input("Dado 2: "))

if(d1+d2>=2 and d1+d2<=20):
	if(nome.upper() == "AAMEUL"):
		c = 8+(d1+d2)
		print(c)
	elif(nome.upper() == "HETHREDIAH"):
		c=(d1+d2)*2
		print(c)
	elif(nome.upper() == "RAKSHASA"):
		c=10+(d1+d2)
	elif(nome.upper != "AAMEUL" and nome.upper() != "HETHREDIAH" and nome.upper != "RAKSHASA")
		print("Entrada invalida")
else:
	print("Entrada invalida")
	

-- ERROR:
File "XXXX", line 14
    elif(nome.upper != "AAMEUL" and nome.upper() != "HETHREDIAH" and nome.upper != "RAKSHASA")
                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
